--- a/package.json
+++ b/package.json
@@ -1,38 +1,69 @@
 {
-  "name": "intern-flow",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "shareio",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@expo/config": "^9.0.1",
+    "@expo/metro-config": "^0.18.4",
+    "@expo/react-native-action-sheet": "^4.0.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@google/generative-ai": "^0.12.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native/metro-config": "^0.74.83",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "dotenv": "^16.4.5",
+    "expo": "^51.0.0",
+    "expo-document-picker": "~12.0.1",
+    "expo-image-picker": "~15.0.4",
+    "expo-media-library": "~16.0.3",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^10.11.1",
+    "install": "^0.13.0",
+    "metro": "~0.80.8",
+    "mime": "^4.0.3",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.47.1",
+    "react": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-crop-picker": "^0.41.0",
+    "react-native-picker": "^4.3.7",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "regexpu-core": "^6.0.0",
+    "typescript": "~5.3.3",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.79",
+    "@types/react-test-renderer": "^18.3.0",
+    "metro": "^0.80.9",
+    "metro-core": "^0.80.9",
+    "typescript": "^5.3.3"
+  },
+  "private": true
 }
